Fix: CSS class "pagination" flex-wrap

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -269,6 +269,7 @@ select option {
 
 .pagination {
   display: flex;
+  flex-wrap: wrap;
   margin: 1.25rem 0;
 }
 
